--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.29.2",
+    "@wagmi/connectors": "^4.1.26",
+    "@wagmi/core": "^2.6.17",
+    "@web3modal/wagmi": "^4.1.10",
+    "encoding": "^0.1.13",
+    "next": "14.2.2",
+    "pino-pretty": "^11.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.2"
+    "viem": "^2.9.23",
+    "wagmi": "^2.5.20"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.2"
+    "typescript": "^5"
   }
 }
